Some new features to reduce clicks needed to generate documents. -auto set date to now if const ok -auto set objects specific contacts with companie default ones (if defined and const ok) For now it only works with bills, but extending the added code of compta>facture.php in some other c_typed controllers will make it works for them (copy or make a lib function?).

--- a/htdocs/langs/en_US/compta.lang
+++ b/htdocs/langs/en_US/compta.lang
@@ -1,5 +1,6 @@
 # Dolibarr language file - en_US - compta
 CHARSET=UTF-8
+DateToNowOnLoadNewBill=Prefill the 'date' field with current date on bills creation
 Accountancy=Accountancy
 AccountancyCard=Accountancy card
 Treasury=Treasury
