--- a/htdocs/langs/en_US/companies.lang
+++ b/htdocs/langs/en_US/companies.lang
@@ -1,5 +1,9 @@
 # Dolibarr language file - en_US - companies
 CHARSET=UTF-8
+UseDefaultContacts=Able to set default contacts'roles for companies to autoset documents' contacts(factures, commandes, etc...).
+RoleToLink=-Select a role-
+SaveLinks=Save roles
+cTypeDfltCtcs=Default customer's contact role:
 ErrorCompanyNameAlreadyExists=Company name %s already exists. Choose another one.
 ErrorPrefixAlreadyExists=Prefix %s already exists. Choose another one.
 ErrorSetACountryFirst=Set the country first
